# ottu-py

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  example_async.py  pre-commit.sh  pyproject.toml  tox.ini
.claude/: settings.local.json
.github/workflows/: code-quality.yml  python-publish.yml
src/ottu/: __init__.py  async_cards.py  async_ottu.py  async_session.py  auth.py  cards.py  cards_async.py  decorators.py  enums.py  errors.py  json.py  mixins.py  ottu.py  ottu_async.py  request.py  request_async.py  session.py  session_async.py  urls.py  utils.py
src/ottu/contrib/django/: admin.py  apps.py  conf.py  models.py  views.py
src/ottu/contrib/django/core/: ottu.py  session.py
src/ottu/contrib/django/migrations/: 0001_initial.py
src/ottu/dj_ottu/: admin.py  apps.py  conf.py  models.py  ottu.py  views.py
src/ottu/dj_ottu/migrations/: 0001_initial.py
src/ottu/utils/: dataclasses.py  helpers.py  webhooks.py
tests/: conftest.py  fake_data.py
tests/test_ottu/: test_async_ottu.py
tests/test_ottu/test_contrib/test_django/: conftest.py  settings.py  test_auth.py  test_models.py  test_ottu.py  test_session.py  test_views.py
tests/test_ottu/test_contrib/test_django/polls/: admin.py  apps.py  urls.py  views.py
tests/test_ottu/test_ottu/: mixins.py  test_auth.py  test_cards.py  test_ottu.py  test_request.py  test_sessions.py
tests/test_ottu/test_ottu/test_utils/: test_dataclasses.py  test_webhooks.py
