[tool.black]
line_length = 88
force_exclude = """
        (.github/*)
    """

[tool.isort]
profile = "black"
quiet = "True"
skip_glob = ".github/*"
skip_gitignore = "True"
combine_as_imports = "True"
line_length = 88

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ottu-py"
version = "0.0.4"
authors = [
    { name = "Jerin Peter George", email = "jerinpetergeorge@gmail.com" },
]
description = "Python bindings for the Ottu Checkout API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Environment :: Web Environment",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
dependencies = [
    "httpx~=0.25.0",
]

[project.optional-dependencies]
django = [
    "django<=4.2"
]
all = [
    "ottu-py[django]"
]

# for test/dev purposes
test = [
    "pytest==7.4.3",
    "pytest-django==4.7.0",
    "pytest-httpx==0.27.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
]
lint-and-formatting = [
    "black",
    "flake8",
    "flake8-print",
    "isort",
    "pre-commit",
    "mypy"
]
dev = ["ottu-py[all, test, lint-and-formatting]", "bump2version~=1.0.1"]

[project.urls]
"Homepage" = "https://github.com/ottuco/ottu-py"

[tool.mypy]
exclude = [
    'src/ottu/contrib/django/migrations', # Use single quotes for globs
]
disable_error_code = "import-untyped"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/ottu/contrib/django/migrations/*",
    "__init__.py",
    "tests/*",
]
[tool.coverage.report]
precision = 2
skip_empty = true
skip_covered = true
show_missing = true
sort = "Cover"
exclude_also = [
    # Magic Methods
    "def __str__",
    "def __repr__",
    "def __bool__",

    # Type Checking
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",

    # Other
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_ottu.test_contrib.test_django.settings"
minversion = "6.0"
testpaths = [
    "tests",
]
